<resources>
    <string name="app_name">RideShare Passenger</string>
    <string name="action_settings">Settings</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="cancelStr">Cancel</string>
    <string name="registerStr">Register</string>
    <string name="strfull_name">Full Name</string>
    <string name="str_email">Email Address</string>
    <string name="strconfirm_password">Confirm Password</string>
    <string name="title_trip_list">Trips</string>
    <string name="title_trip_detail">Trip Detail</string>
    <string name="title_mytrip_list">My Trips</string>
    <string name="title_mytrip_detail">My Trip Detail</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="my_trips">My Trips</string>
    <string name="find_trip">Find Trip</string>
    <string name="update_user">Update User</string>
    <string name="sign_out">Sign Out</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_full_name">New Full Name</string>
    <string name="new_email_address">New Email Address</string>
    <string name="time_first">Click to Set</string>
    <string name="start_time">Start Time (Optional)</string>
    <string name="cancel">Cancel</string>
    <string name="search_trip">Search Trips</string>
    <string name="startlocation">Start Location (Optional)</string>
    <string name="destination">Destination (Optional)</string>
    <string name="cost1">Cost (Optional)</string>
    <string name="vehicle_type">Vehicle Type (Optional)</string>
    <string name="start_date">Start Date (Optional)</string>
    <string name="date_first">Click to Set</string>
    <string name="reset_fields">Reset Fields</string>
    <string name="title_searchresult_list">Search Results</string>
    <string name="title_searchresult_detail">Trip Details</string>
</resources>
